--- a/protfolio/cv.html
+++ b/protfolio/cv.html
@@ -4,47 +4,68 @@
   <head>
     <meta charset="utf-8">
     <title>CV Ahmad</title>
-    <pre>
 
-    </pre>
   </head>
 
   <body>
     <hr>
     <h1> Personal Information</h1>
     <hr>
-    <p><img src="ahmad CV.jpg" alt="i am " width="200" height="200" button></p>
+    <p><img src="ahmad CV.jpg" alt="i am " width="150" height="150"></p>
     <ul>
-      <li>Name : Ahmad</li>
-      <li>first : Al Ahmad</li>
-      <li>Address Striegelstrasse 9, 4665 Oftringen</li>
-      <li>Mail :ahmad10041993@gmail.com</li>
-      <li>Tel : 079 251 44 64</li>
-      <li>Born : 10/04/1993</li>
+      <li>
+        <h3>Name : Ahmad</h3>
+      </li>
+      <li>
+        <h3>first : Al Ahmad</h3>
+      </li>
+      <li>
+        <h3>Address : Striegelstrasse 9, 4665 Oftringen</h3>
+      </li>
+      <li>
+        <h3>Mail : ahmad10041993@gmail.com</h3>
+      </li>
+      <li>
+        <h3>Tel : 079 251 44 64</h3>
+      </li>
+      <li>
+        <h3>Born : 10/04/1993</h3>
+      </li>
+      <li>
+        <h3>hometown : Damascus</h3>
+      </li>
+      <li>
+        <h3>Nationality : Syria, Residence Permit B</h3>
+      </li>
+      <li>
+        <h3>Schools visited 2012-2015 University of Damascus Focus on Trade
+          and Economics 1998-2012 Compulsory school in Syria
+        </h3>
+      </li>
+      <li>
+        <h3>Professional experience 2015 textile production sewing, Turkey
+          2010-2015 employee refrigerator factory, Syria</h3>
+      </li>
+      <li>
+        <h3>Language skills Arabic : mother tongue</h3>
+      </li>
+      <li>
+        <h3>German: A2, until further visit language school</h3>
+      </li>
+      <li>
+        <h3>English: Basic knowledge</h3>
+      </li>
+
+      <li>
+        <h3>Computer literacy programming skills
+        </h3>
+      </li>
+      <li>
+        <h3>Hobbies IT, sports
+        </h3>
+      </li>
+
     </ul>
-
-
-    hometown Damascus
-
-    Nationality Syria, Residence Permit B
-
-    Schools visited 2012-2015 University of Damascus Focus on Trade and Economics
-    1998-2012 Compulsory school in Syria
-
-    Professional experience 2015 textile production sewing, Turkey
-    2010-2015 employee refrigerator factory, Syria
-
-
-    Language skills Arabic: mother tongue
-    German: A2, until further visit language school
-    English: Basic knowledge
-
-    Computer literacy programming skills
-
-    Hobbies IT, sports, music
-
-
-
 
   </body>
 
