--- a/reipes/cooking 3.html
+++ b/reipes/cooking 3.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>cooking 3</title>
+    <link rel="stylesheet" type="text/css" href="cooking 3.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script"
+    rel="stylesheet">
   </head>
 
   <body>
