--- a/scratch/css.html
+++ b/scratch/css.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <title>css examples</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script"
+    rel="stylesheet">
+    
   </head>
 
   <body>
