--- a/scratch/index.html
+++ b/scratch/index.html
@@ -5,14 +5,15 @@
     <meta charset="utf-8">
     <title> My test page</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <script src="index.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script"
+    rel="stylesheet">
   </head>
 
   <body>
     <h1>This is a heading</h1>
     <p>This is a single paragraph</p>
     <button type="start" name="Ahmad"></button>
-    
+    <p><img <source src="https://powercoders.org/images/powercoders-logo-CMYK.svg">
     </p> <!-- alt="powercoders-logo-CMYK.svg" width="1000" height="1000"-->
     <p>The unorderd Iist uses bullet points.</p>
     <ul>
