--- a/scratch/breadcrumb.html
+++ b/scratch/breadcrumb.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Breadcrumb navigation</title>
-    <link rel="stylesheet" href="breadcrumb.css" type="text/css" >
+    <link rel="stylesheet" href="breadcrumb.css" type="text/css">
+    <link href="style.css" rel="stylesheet">
+    <link href="large.css" rel="stylesheet" media="screen and (min-min-width: 600px)">
   </head>
+
   <body>
     <ul class="breadcrumb">
       <li>Powercoders</li>
@@ -14,4 +19,5 @@
     </ul>
     <p>Powercoders &gt; Courses &gt; Basel 2018 &gt; Students</p>
   </body>
+
 </html>
