--- a/protfolio/cv.html
+++ b/protfolio/cv.html
@@ -3,70 +3,53 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>CV Ahmad</title>
-
+    <link rel="stylesheet" type="text/css" href="cv.css" />
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script" rel="stylesheet">
+    <link rel="stylesheet" href="breadcrumb.css" type="text/css">
+    <link href="style.css" rel="stylesheet">
+    <link href="smalll.css" rel="stylesheet" media="screen and (max-width: 500px) and (min-width: 300px)">
+    <link href="medium.css" rel="stylesheet" media="screen and (max-width: 900px) and (min-width: 600px)">
+    <link href="large.css" rel="stylesheet" media="screen and (max-width: 1200px) and (min-width: 1000px)">
   </head>
 
   <body>
-    <hr>
-    <h1> Personal Information</h1>
-    <hr>
-    <p><img src="ahmad CV.jpg" alt="i am " width="150" height="150"></p>
-    <ul>
-      <li>
-        <h3>Name : Ahmad</h3>
-      </li>
-      <li>
-        <h3>first : Al Ahmad</h3>
-      </li>
-      <li>
-        <h3>Address : Striegelstrasse 9, 4665 Oftringen</h3>
-      </li>
-      <li>
-        <h3>Mail : ahmad10041993@gmail.com</h3>
-      </li>
-      <li>
-        <h3>Tel : 079 251 44 64</h3>
-      </li>
-      <li>
-        <h3>Born : 10/04/1993</h3>
-      </li>
-      <li>
-        <h3>hometown : Damascus</h3>
-      </li>
-      <li>
-        <h3>Nationality : Syria, Residence Permit B</h3>
-      </li>
-      <li>
-        <h3>Schools visited 2012-2015 University of Damascus Focus on Trade
-          and Economics 1998-2012 Compulsory school in Syria
-        </h3>
-      </li>
-      <li>
-        <h3>Professional experience 2015 textile production sewing, Turkey
-          2010-2015 employee refrigerator factory, Syria</h3>
-      </li>
-      <li>
-        <h3>Language skills Arabic : mother tongue</h3>
-      </li>
-      <li>
-        <h3>German: A2, until further visit language school</h3>
-      </li>
-      <li>
-        <h3>English: Basic knowledge</h3>
-      </li>
 
-      <li>
-        <h3>Computer literacy programming skills
-        </h3>
-      </li>
-      <li>
-        <h3>Hobbies IT, sports
-        </h3>
-      </li>
-
-    </ul>
-
+    <div class="cv">
+      <h2  style="text-shadow: 0 0 3px #FF0000;"> Personal Information</h2>
+      <p><img class="ahmad" src="ahmad-cv.jpg" alt="i am "></p>
+      <ul class="text">
+        <li>Name : Ahmad</li>
+        <li>first : Al Ahmad</li>
+        <li>Address : Striegelstrasse 9, 4665 Oftringen</li>
+        <li>Mail : ahmad10041993@gmail.com</li>
+        <li>Tel : 079 251 44 64</li>
+        <li>Born : 10/04/1993</li>
+        <li>hometown : Damascus</li>
+        <li>Nationality : Syria, Residence Permit B</li>
+      </ul>
+      <h2 style="text-shadow: 0 0 3px #FF0000;;">Schools</h2>
+      <ul>
+        <li>Schools visited 2012-2015 University of Damascus Focus on Trade
+          and Economics 1998-2012 Compulsory school in Syria</li>
+        <li>Professional experience 2015 textile production sewing, Turkey
+          2010-2015 employee refrigerator factory, Syria</li>
+        <li>Language skills : Arabic mother tongue</li>
+        <li>German: A2, until further visit language school</li>
+        <li>English: Basic knowledge</li>
+        <li>Computer literacy programming skills</li>
+      </ul>
+      <h2 style="text-shadow: 0 0 3px #FF0000;;">Hobbies</h2>
+      <ul>
+        <li> IT, sports</li>
+      </ul>
+      <!--<marquee scrolldelay="100" width="1500px" height="25px" direction="right" bgcolor="#FFFFFF">
+      <font style="text-shadow: -2px -2px 2px red" color="#000000"> CV Ahmad Al Ahmad CV / Mail:
+        Ahmad.AlAhmad@powercoder.org / Tel: 079 251 44 64
+      </font>
+    </marquee>-->
+    </div>
   </body>
 
 </html>
