--- a/scratch/js-1.html
+++ b/scratch/js-1.html
@@ -5,20 +5,22 @@
     <meta charset="utf-8">
     <title>change_para_class</title>
     <link rel="stylesheet" href="js-1.css" type="text/css" />
+    <script src="setclass.js"></script>
+
   </head>
 
   <body>
     <p id="mypara">This is a paragraph of text that can change style.
       Use the optionsbelow to change how this looks.</p>
     <ul>
-      <li onclick="setClasswarning(event);">Make it a warning</li>
-      <li onclick="setClasstip(event);">Make it a tip</li>
+      <li onmousemove="setClasswarning(event);">Make it a warning</li>
+      <li onmousemove="setClasstip(event);">Make it a tip</li>
       <li onclick="setClassnormal(event);">Make it a normal</li>
     </ul>
     <p class="warning">This is an example warning.</p>
     <p class="tip">This is an example tip.</p>
-    <p onclick="listenForClick(event);">Some text</p>
-    <script src="js-1.js"></script>
+    <!--<p onclick="listenForClick(event);">Some text</p>-->
+  <!--  <script src="setclass.js"></script>-->
   </body>
 
 </html>
