--- a/scratch/js-1.html
+++ b/scratch/js-1.html
@@ -13,9 +13,9 @@
     <p id="mypara">This is a paragraph of text that can change style.
       Use the optionsbelow to change how this looks.</p>
     <ul>
-      <li onmousemove="setClasswarning(event);">Make it a warning</li>
-      <li onmousemove="setClasstip(event);">Make it a tip</li>
-      <li onclick="setClassnormal(event);">Make it a normal</li>
+      <li onclick="setClass(event, 'warning');">Make it a warning</li>
+      <li onclick="setClass(event, 'tip');">Make it a  tip</li>
+      <li onclick="setClass(event, '');">Make it a normal</li>
     </ul>
     <p class="warning">This is an example warning.</p>
     <p class="tip">This is an example tip.</p>
