--- a/shopping/index.html
+++ b/shopping/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <h1>My shopping list</h1>
-<!--Controls to add new items go he -->
+<!--Controls to add new items go here -->
+<!--This is the shopping list -->
 <ul>
 
 
