--- a/shopping/index.html
+++ b/shopping/index.html
@@ -10,6 +10,13 @@
 <h1>My shopping list</h1>
 <!--Controls to add new items go here -->
 <!--This is the shopping list -->
+<!-- Controls to add new items go here -->
+<div>
+    <label for="item">Enter a new item:</label>
+    <input type="text" id="item"
+           placeholder="Type something to buy">
+    <button>GO</button>
+</div>
 <ul>
 
 
