add elements to Enter

--- a/shopping/index.html
+++ b/shopping/index.html
@@ -13,13 +13,12 @@
 <!-- Controls to add new items go here -->
 <div>
     <label for="item">Enter a new item:</label>
-    <input type="text" id="item"
+  <input type="text" id="item"
            placeholder="Type something to buy">
-    <button>GO</button>
+  <button id="myBtn" >GO</button>
+
 </div>
 <ul>
-
-
 </ul>
 </body>
 </html>
