--- a/shopping/index.html
+++ b/shopping/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>shopping</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="shopping.js"></script>
-</head>
-<body>
-<h1>My shopping list</h1>
-<!--Controls to add new items go here -->
-<!--This is the shopping list -->
-<!-- Controls to add new items go here -->
-<div>
-    <label for="item">Enter a new item:</label>
-  <input type="text" id="item"
-           placeholder="Type something to buy">
-  <button id="myBtn">GO</button>
-</div>
-<ul>
-</ul>
-</body>
+  </head>
+  <body>
+
+      <img class="sho3" src="shopping.jpg">
+      <img class="sho5" src="sho5.gif">
+      <div>
+      <h1>My shopping list</h1>
+      <label for="item">search:</label>
+      <input type="text" id="item"
+             placeholder="Write about what you're looking for" style="color: black">
+      <button id="add">ok</button>
+        <button id="clear">Delete</button>
+    </div>
+    <div id="mySidenav" class="sidenav">
+      <a href="#" id="about">Home</a>
+      <a href="#" id="blog">Men</a>
+      <a href="#" id="projects">Women</a>
+      <a href="#" id="contact">Children</a>
+    </div>
+    <ul>
+    </ul>
+    <img class="sh1" src="sh1.jpg">
+  </body>
 </html>
