new update shopping-class

--- a/shopping-class/index.html
+++ b/shopping-class/index.html
@@ -6,9 +6,10 @@
     <title>shopping</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="shopping.js" async></script>
+    <script src="shopping-list-item.js" async></script>
+    <script src="ui.js" async></script>
   </head>
   <body>
-
     <img class="sho3" src="shopping.jpg" alt>
     <img class="sho5" src="sho5.gif" alt>
     <div>
